style: 不要な記述を削除しフォーマッターを適用した